added some code comments

--- a/nlp_explore_lesson.ipynb
+++ b/nlp_explore_lesson.ipynb
@@ -1791,6 +1791,7 @@
     }
    ],
    "source": [
+    "# is the mean and median values of sentiment score different for ham vs spam?\n",
     "df.groupby('label').sentiment.agg(['mean','median'])"
    ]
   },
@@ -1821,6 +1822,7 @@
     }
    ],
    "source": [
+    "#plot message_length vs sentiment and hue by label\n",
     "sns.relplot(data = df, x = 'message_length', y = 'sentiment', hue = 'label')"
    ]
   },
@@ -1851,6 +1853,7 @@
     }
    ],
    "source": [
+    "# is the distribution for sentiment different for ham vs spam\n",
     "sns.kdeplot(df[df.label == 'ham'].sentiment, label = 'ham')\n",
     "sns.kdeplot(df[df.label == 'spam'].sentiment, label = 'spam')"
    ]
@@ -1892,16 +1895,18 @@
     }
    ],
    "source": [
+    "# Bivariate KDE plot for message_length vs sentiment score \n",
     "sns.kdeplot(df[df.label == 'ham'].message_length,df[df.label == 'ham'].sentiment, levels = 30, shade = True )\n",
     "sns.kdeplot(df[df.label == 'spam'].message_length,df[df.label == 'spam'].sentiment, levels = 30, shade = True, alpha = 0.5 )"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Further exploration opportunities:\n",
+    "- Can I create clusters based on new numeric features I created above?\n"
+   ]
   },
   {
    "cell_type": "markdown",
